<resources>
    <string name="app_name">Zeus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_artist">Search artist</string>

    <string name="login">Login</string>
    <string name="forgot_password" translatable="false">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="oops_something_went_wrong">Oops something went wrong!</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="no">no</string>
    <string name="guest_login">Guest Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_sign_up_with">Or Sign Up with</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="new_user">New User</string>
    <string name="email_address_phone_number">Email address/ Phone Number</string>
    <string name="send">Send</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_the_otp_sent_to_your_mobile_number">Please enter the OTP sent to your mobile number</string>
    <string name="verify">Verify</string>
    <string name="create_a_nnew_password">Create a \nNew Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="language">Language</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="debit_card">Debit Card</string>
    <string name="faq">FAQ</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="your_order_has_been_placed_successfully">Your Order has been Placed successfully.</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="how_would_you_rate_our_app_n_expirence">How would you rate our App \n Expirence ?</string>
    <string name="how_would_you_rate_your_order_n_expirence">How would you rate your Order \n Expirence ?</string>
    <string name="submit">Submit</string>
    <string name="add_review">Add Review</string>
    <string name="share_your_feedback">Share Your Feedback</string>
    <string name="tell_us_what_you_think">Tell us what you think</string>
    <string name="about_us">About Us</string>
    <string name="we_will_need_your_location_to_give_you_better_expirence">We will need your location to \n give you better expirence</string>
    <string name="find_resturants_and_n_shops_near_you">Find Resturants and \n Shops near you!</string>
    <string name="allow_location">Allow Location</string>
    <string name="contact_us">Contact Us</string>
    <string name="your_name">Your Name</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="find_cool_products_n_fit_your_style">Find Cool Products \nFit Your Style</string>
    <string name="reviews">Reviews</string>
    <string name="payment_method">Payment Method</string>
    <string name="coupons">Coupons</string>
    <string name="reward">Reward</string>
    <string name="order_history">Order History</string>
    <string name="address">Address</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="email_address">Email address</string>
    <string name="change">Change</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="view_all">View All</string>
    <string name="paid">Paid</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_orders">My Orders</string>
    <string name="current_orders">Current Orders</string>
    <string name="past_orders">Past Orders</string>
    <string name="my_service">My Service</string>
    <string name="messages">Messages</string>
    <string name="payment_options">Payment Options</string>
    <string name="write_a_review">Write a Review</string>
    <string name="description">Description</string>
    <string name="similar_services">Similar Services</string>
    <string name="special_instruction">Special Instruction</string>
    <string name="points">Points</string>
    <string name="total">Total</string>
    <string name="check_out">Check Out</string>
    <string name="delete">Delete</string>
    <string name="enter_email">Enter email</string>
    <string name="password_8_character">Password must have atleast 8 character</string>
    <string name="enter_name">Enter name</string>
    <string name="name_must_have_atleast_3_character_long">Name must have atleast 3 character long</string>
    <string name="name_maximum">Name should not exceed 15 character</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="enter_Number_with_Country_Code">Enter Number with Country Code (e.g +92)</string>
    <string name="enter_Password">Enter Password</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="popular_stores">Popular Stores</string>
    <string name="keep_shopping">Keep Shopping</string>
    <string name="privacy_policy">Keep Shopping</string>

</resources>