<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/ic_top_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/textView19"
                style="@style/header_txt_regular_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Language"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/notification"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="@string/language"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_16ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#D9D9D9" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/notification"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:layout_toStartOf="@+id/swOnOff"
                    android:text="@string/notifications"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/_16ssp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swOnOff"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:thumb="@drawable/custom_thumb"
                    app:track="@drawable/custom_track" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#D9D9D9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/notification"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="@string/rate_our_app"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_16ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#D9D9D9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/notification"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="@string/faq"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_16ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#D9D9D9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/notification"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="About Us"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_16ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#D9D9D9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/notification"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="@string/terms_conditions"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_16ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#D9D9D9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/notification"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="Privacy Policy"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_16ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#D9D9D9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/notification"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:text="Contact Us"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>