<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:background="@drawable/user_topbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/border_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jari Rizvi"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/btnBack"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.27" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="0336-6830224"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="05"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView44"
                app:layout_constraintVertical_bias="0.4" />


            <View
                android:id="@+id/view"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView45"
                app:layout_constraintVertical_bias="0.2" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_wishlist"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.79"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView45" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="05"
                android:textColor="@color/white"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/textView45" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Merchants"
                android:layout_marginTop="@dimen/_3sdp"
                android:textColor="@color/white"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintBottom_toBottomOf="@+id/textView46"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView45" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.84"
                app:layout_constraintVertical_bias="0.38"
                app:layout_constraintStart_toEndOf="@+id/textView44"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_setting" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/card_background"
            android:elevation="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.04">

            <TextView
                android:id="@+id/textView49"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_orders"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView49"
                app:layout_constraintVertical_bias="0.3"
                app:srcCompat="@drawable/shopping_bag" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_orders"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView16" />

            <View
                android:id="@+id/view1"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/textSecondaryColor"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toEndOf="@+id/textView50"
                app:layout_constraintTop_toTopOf="@+id/imageView16"
                app:layout_constraintVertical_bias="0.07" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imageView16"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintStart_toEndOf="@+id/view1"
                app:layout_constraintTop_toTopOf="@+id/imageView16"
                app:srcCompat="@drawable/shopping_bag" />

            <View
                android:id="@+id/view2"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/textSecondaryColor"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/view1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toEndOf="@+id/textView51"
                app:layout_constraintTop_toTopOf="@+id/view1" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_orders"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView17"
                app:layout_constraintStart_toStartOf="@+id/imageView17"
                app:layout_constraintTop_toBottomOf="@+id/imageView17" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imageView17"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/imageView17"
                app:srcCompat="@drawable/shopping_bag" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reviews"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView18"
                app:layout_constraintStart_toStartOf="@+id/imageView18"
                app:layout_constraintTop_toBottomOf="@+id/imageView18" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/card_background"
            android:elevation="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
            app:layout_constraintVertical_bias="0.04">

            <TextView
                android:id="@+id/tvServices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_service"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <ImageView
                android:id="@+id/imgMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvServices"
                app:layout_constraintVertical_bias="0.3"
                app:srcCompat="@drawable/shopping_bag" />

            <TextView
                android:id="@+id/tvMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messages"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgMsg" />

            <View
                android:id="@+id/view10"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/textSecondaryColor"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toEndOf="@+id/tvMsg"
                app:layout_constraintTop_toTopOf="@+id/imgMsg"
                app:layout_constraintVertical_bias="0.07" />

            <ImageView
                android:id="@+id/imgPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imgMsg"
                app:layout_constraintEnd_toStartOf="@+id/view11"
                app:layout_constraintStart_toEndOf="@+id/view10"
                app:layout_constraintTop_toTopOf="@+id/imgMsg"
                app:srcCompat="@drawable/shopping_bag" />

            <View
                android:id="@+id/view11"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/textSecondaryColor"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/view10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toEndOf="@+id/tvPayment"
                app:layout_constraintTop_toTopOf="@+id/view10" />

            <TextView
                android:id="@+id/tvPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_options"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imgPayment"
                app:layout_constraintStart_toStartOf="@+id/imgPayment"
                app:layout_constraintTop_toBottomOf="@+id/imgPayment" />

            <ImageView
                android:id="@+id/imgSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imgPayment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view11"
                app:layout_constraintTop_toTopOf="@+id/imgPayment"
                app:srcCompat="@drawable/shopping_bag" />

            <TextView
                android:id="@+id/tvSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imgSupport"
                app:layout_constraintStart_toStartOf="@+id/imgSupport"
                app:layout_constraintTop_toBottomOf="@+id/imgSupport" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Keep Shopping"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="409dp"
            android:layout_height="240dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView53" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>